--- a/src/app/FileUpload/fileupload.component.html
+++ b/src/app/FileUpload/fileupload.component.html
@@ -49,8 +49,8 @@
             <dx-button text="BROWSE MORE FILES..." class="qq-upload-button-selector qq-upload-button"></dx-button>
         </div>
     </div>
-    <br>
+    <!-- <br>
     <hr>
     <br>
-    <dx-button text="Start Uploading" (click)="uploadFiles()"></dx-button>
+    <dx-button text="Start Uploading" (click)="uploadFiles()"></dx-button> -->
 </div>
