--- a/src/app/SubmissionDetails/submission-details.component.scss
+++ b/src/app/SubmissionDetails/submission-details.component.scss
@@ -8,7 +8,7 @@
 		margin: 0 0 10px;
 	}
 
-	.dx-datagrid-rowsview{
+	.dx-datagrid-table{
 		td{
 			vertical-align: middle !important;
 			white-space: normal;
