--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<submission-details-app></submission-details-app>
+<sites-listing></sites-listing>
+<!-- <submission-details-app></submission-details-app>
 <submission-app></submission-app>
 <fileupload-app></fileupload-app>
 <uploaded-files-app></uploaded-files-app>
 <data-grid-app></data-grid-app>
-<sample-app></sample-app>
+<sample-app></sample-app> -->
