--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <sites-listing></sites-listing>
-<!-- <submission-details-app></submission-details-app>
-<submission-app></submission-app>
+<submission-listing></submission-listing>
+<uploaded-files></uploaded-files>
+<submission-details-app></submission-details-app>
 <fileupload-app></fileupload-app>
-<uploaded-files-app></uploaded-files-app>
-<data-grid-app></data-grid-app>
-<sample-app></sample-app> -->
