--- a/src/app/DataGrid/datagrid.component.html
+++ b/src/app/DataGrid/datagrid.component.html
@@ -6,6 +6,7 @@
 			[allowFiltering]="getAttributeValue('allowFiltering', column)"
 			[allowEditing]="getAttributeValue('allowEditing', column)"
 			[dataType]="getAttributeValue('dataType', column)"
+			[format]="getAttributeValue('format', column)"
 			[caption]="getAttributeValue('caption', column)"
 			[cellTemplate]="getAttributeValue('cellTemplate', column)">
 		</dxi-column>
