--- a/src/app/SubmissionDetails/submission-details.component.html
+++ b/src/app/SubmissionDetails/submission-details.component.html
@@ -1,30 +1,6 @@
 <div class="section submission-details">
 	<h2>{{title}}</h2>
-	<dx-tree-list
-		[showColumnLines]="false"
-		[showRowLines]="true"
-		[showBorders]="false"
-		[dataSource]="items"
-		itemsExpr="InnerItems"
-		class="treeContainer"
-		dataStructure="tree">
-		<dxo-selection mode="multiple"></dxo-selection>
-		<dxi-column dataField="DocumentID"></dxi-column>
-		<dxi-column dataField="FileName"></dxi-column>
-		<dxi-column dataField="PreferredName"></dxi-column>
-		<dxi-column dataField="Status"></dxi-column>
-		<dxi-column dataField="SubmittedBy"></dxi-column>
-		<dxi-column
-			dataType="date"
-			cellTemplate="dateCell"
-			dataField="SubmittedDate"
-			caption="Date Submitted"
-			>
-		</dxi-column>
-		<span *dxTemplate="let cellData of 'dateCell'">
-			{{cellData.value | date: 'dd-MMM-yyyy'}}
-		</span>
-	</dx-tree-list>
+	<tree-list-app [customOptions]="options"></tree-list-app>
 	<div class="buttons">
 		<dx-button text="Load Old Items" (click)="loadData(true)"></dx-button>
 		<dx-button text="Load New Items" (click)="loadData(false)"></dx-button>
